--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
-  scroll-behavior: smooth;
+  scroll-behavior: auto !important;
 }
 
 body {
